base inicio login session, ahora implementar google sign in

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ PORT = 3001
 USER = user_node_cafe
 PASS = elpass
 MONGODB_CNN=el link del atlas para conexion mongodb
+
+#JWT
+SECRET_KEY_JWT=aki la key para firmar jwt
