Agrego ruta para subir archivo a server y actualoizar img de modelos con api de cloudinary

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,10 @@ MONGODB_CNN=el link del atlas para conexion mongodb
 
 #JWT
 SECRET_KEY_JWT=aki la key para firmar jwt
+
+#GoogleAuth
+GOOGLE_CLIENT_ID=FASFAS
+GOOGLE_SECRET_ID=FASFAS
+
+#CLOUDINARY
+CLOUDINARY_URL=FASFAS
